<?xml version="1.0"?>
<package format="2">
  <name>amr_maps</name>
  <version>0.0.0</version>
  <description>The amr_maps package</description>

  <maintainer email="labiybafakh@gmail.com">Muhammad Labiyb Afakh</maintainer>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
