<?xml version="1.0"?>
<package format="2">
  <name>amr_multi_goal</name>
  <version>0.0.0</version>
  <description>The multi_goal_navigation package</description>

  <maintainer email="labiybafakh@gmail.com">Muhammad Labiyb Afakh</maintainer>

  <license>MIT license</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>roscpp</depend>

  <export>

  </export>
</package>
